--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [General]
 LuaPackages=Xmode_hegemony
-ForbidPackages=test
-ServerName=HAHA
+ForbidPackages=test, jiange-defense
+ServerName=hk2\x7684\x670d\x52a1\x5668
 GameMode=06p
-OperationTimeout=30
+OperationTimeout=60
 OperationNoLimit=false
 RandomSeat=true
 EnableCheat=false
@@ -11,33 +11,33 @@ FreeChoose=false
 PileSwappingLimitation=5
 ForbidSIMC=false
 DisableChat=false
-HegemonyMaxChoice=5
+HegemonyMaxChoice=7
 CountDownSeconds=3
-NullificationCountDown=15
+NullificationCountDown=8
 EnableMinimizeDialog=false
-RewardTheFirstShowingPlayer=true
-ForbidAddingRobot=true
-OriginAIDelay=3000
+RewardTheFirstShowingPlayer=false
+ForbidAddingRobot=false
+OriginAIDelay=1000
 AlterAIDelayAD=false
-AIDelayAD=3000
-SurrenderAtDeath=false
-LuckCardLimitation=1
+AIDelayAD=0
+SurrenderAtDeath=true
+LuckCardLimitation=0
 ServerPort=9527
-Address=192.168.1.81
+Address=
 DisableLua=false
-AIChat=false
-BanPackages=test
-EnableLordConvertion=false
-CardConversions=@Invalid()
-HistoryIPs=127.0.0.1
-WindowSize=@Size(1537 873)
-WindowPosition=@Point(-1695 74)
+AIChat=true
+BanPackages=test, jiange-defense
+EnableLordConvertion=true
+CardConversions=DragonPhoenix, PeaceSpell
+HistoryIPs=113.161.71.79, 127.0.0.1
+WindowSize=@Size(1357 835)
+WindowPosition=@Point(-2 1)
 WindowState=0
-UserName=Ku Kha
-HostAddress=127.0.0.1
+UserName=Qu\xe2n S\x1b0
+HostAddress=113.161.71.79
 EnableReconnection=true
-BGMVolume=@Variant(\0\0\0\x87<#\xd7\n)
-EffectVolume=@Variant(\0\0\0\x87>\x99\x99\x9a)
+BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
+EffectVolume=@Variant(\0\0\0\x87>\xeb\x85\x1f)
 EnableEffects=true
 EnableLastWord=true
 EnableBgMusic=true
@@ -46,9 +46,9 @@ NoEquipAnim=false
 NeverNullifyMyTrick=false
 EnableAutoTarget=true
 EnableIntellectualSelection=true
-EnableSuperDrag=true
-EnableDoubleClick=true
-EnableAutoPreshowInConsoleMode=true
+EnableSuperDrag=false
+EnableDoubleClick=false
+EnableAutoPreshowInConsoleMode=false
 BubbleChatBoxKeepSeconds=2
 IgnoreOthersSwitchesOfSkin=false
 EnableAutoSaveRecord=false
@@ -56,40 +56,44 @@ NetworkOnly=false
 SkillDescriptionInOverviewColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\0\0\x80\x80\0\0)
 SkillDescriptionInToolTipColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\xff\xff\x33\x33\0\0)
 TextEditColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\xff\xff\xff\xff\0\0)
-UIFont=@Variant(\0\0\0@\0\0\0\f\0\x45\0\x62\0r\0i\0m\0\x61@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0K\x10)
-AppFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+UIFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+AppFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 ToolTipBackgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\0\0\0\0\0\0\0\0)
 TableBgImage=image/backdrop/table.jpg
 BackgroundImage=image/backdrop/bg.jpg
 RecordSavePath=records/
-UserAvatar=lord_sunquan
+UserAvatar=jg_sima
+LastReplayDir=C:/Users/Administrator/Desktop/save TQS
 
 [CardEditor]
 Font=@Variant(\0\0\0@\0\0\0\f\0S\0i\0m\0H\0\x65\0i\xbf\xf0\0\0\0\0\0\0\0\0\0\t\x5\x1\0\x32\x10)
 TitleText=
-TitleFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@4\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+TitleFont="@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@,\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0K\x10)"
 NameText=
-NameFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@B\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-MaxHP=6
+NameFont=@Variant(\0\0\0@\0\0\0\x14\0V\0N\0I\0-\0\x44\0i\0s\0n\0\x65\0y@B\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0K\x10)
+MaxHP=3
 Kingdom=wei
 IsLord=false
-NamePos=@Variant(\0\0\0\x1a@9\0\0\0\0\0\0@n\xe0\0\0\0\0\0)
-TitlePos=@Variant(\0\0\0\x1a@J\x80\0\0\0\0\0@_\0\0\0\0\0\0)
-PhotoPos=@Variant(\0\0\0\x1a\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0)
+NamePos=@Variant(\0\0\0\x1a@<\0\0\0\0\0\0@i\xc0\0\0\0\0\0)
+TitlePos=@Variant(\0\0\0\x1a@3\0\0\0\0\0\0@P\x80\0\0\0\0\0)
+PhotoPos=@Variant(\0\0\0\x1a@G\x80\0\0\0\0\0@6\xff\xff\xff\xff\xff\xe0)
 SkillBoxPos=@Variant(\0\0\0\x1a@P\xc0\0\0\0\0\0@xP\0\0\0\0\0)
-CompanionBoxPos=@Variant(\0\0\0\x1a@s\xe8\0\0\0\0\0@vp\0\0\0\0\0)
+CompanionBoxPos=@Variant(\0\0\0\x1a@m\xf0\0\0\0\0\0@vp\0\0\0\0\0)
 Companion=
-CompanionFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x80\0\x32\x10)
-CompanionVisible=false
+CompanionFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x80\0K\x10)
+CompanionVisible=true
 SkillTitles\size=0
-SkillDescription="<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-html40/strict.dtd\">\n<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\np, li { white-space: pre-wrap; }\n</style></head><body style=\" font-family:'Helvetica World'; font-size:9pt; font-weight:400; font-style:normal;\">\n<p style=\"-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'MS Shell Dlg 2';\"><br /></p></body></html>"
-SkillDescriptionFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-TinyFont=@Variant(\0\0\0@\0\0\0\x1e\0H\0\x65\0l\0v\0\x65\0t\0i\0\x63\0\x61\0 \0W\0o\0r\0l\0\x64@\x1c\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+SkillDescription="<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-html40/strict.dtd\">\n<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\np, li { white-space: pre-wrap; }\n</style></head><body style=\" font-family:'Tahoma'; font-size:8pt; font-weight:400; font-style:normal;\">\n<p style=\"-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;\"><br /></p>\n<p style=\"-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;\"><br /></p></body></html>"
+SkillDescriptionFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+TinyFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@\x1c\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 CopyrightText=
 TitleSkip=0
 Text=
-TransMaxHP=6
-
-[Banlist]
-Generals=@Invalid()
-Pairs=@Invalid()
+TransMaxHP=0
+Photo=C:/Users/Administrator/Desktop/bianhuanghou.png
+ImportPath=C:/Users/Administrator/Desktop
+ImageRatio=118
+SkillTitles\1\TitleText=V\xf4 song
+SkillTitles\1\TitlePos=@Variant(\0\0\0\x1a@4\0\0\0\0\0\0@x\0\0\0\0\0\0)
+SkillTitleFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@ \0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+ExportPath=C:/Users/Administrator/Desktop/t\x1b0\x1edbng
