--- a/config.ini
+++ b/config.ini
@@ -31,7 +31,7 @@ EnableLordConvertion=true
 CardConversions=DragonPhoenix, PeaceSpell
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(191 139)
+WindowPosition=@Point(370 -1)
 WindowState=0
 UserName=Qu\xe2n S\x1b0
 HostAddress=113.161.71.79
@@ -78,7 +78,7 @@ NamePos=@Variant(\0\0\0\x1a@<\0\0\0\0\0\0@i\xc0\0\0\0\0\0)
 TitlePos=@Variant(\0\0\0\x1a@3\0\0\0\0\0\0@P\x80\0\0\0\0\0)
 PhotoPos=@Variant(\0\0\0\x1a@G\x80\0\0\0\0\0@6\xff\xff\xff\xff\xff\xe0)
 SkillBoxPos=@Variant(\0\0\0\x1a@P\xc0\0\0\0\0\0@xP\0\0\0\0\0)
-CompanionBoxPos=@Variant(\0\0\0\x1a@m\xf0\0\0\0\0\0@vp\0\0\0\0\0)
+CompanionBoxPos=@Variant(\0\0\0\x1a@I\0\0\0\0\0\0@vp\0\0\0\0\0)
 Companion=
 CompanionFont=@Variant(\0\0\0@\0\0\0\f\0T\0\x61\0h\0o\0m\0\x61@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x80\0K\x10)
 CompanionVisible=true
