--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [General]
 LuaPackages=Xmode_hegemony
 ForbidPackages=test, jiange-defense
-ServerName=hk2\x7684\x670d\x52a1\x5668
+ServerName=123123123
 GameMode=06p
 OperationTimeout=60
 OperationNoLimit=false
@@ -31,7 +31,7 @@ EnableLordConvertion=true
 CardConversions=DragonPhoenix, PeaceSpell
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(370 -1)
+WindowPosition=@Point(371 -3)
 WindowState=0
 UserName=Qu\xe2n S\x1b0
 HostAddress=113.161.71.79
