--- a/config.ini
+++ b/config.ini
@@ -31,11 +31,11 @@ EnableLordConvertion=true
 CardConversions=DragonPhoenix, PeaceSpell
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(370 -1)
+WindowPosition=@Point(229 82)
 WindowState=0
-UserName=Qu\xe2n S\x1b0
+UserName=HHH
 HostAddress=113.161.71.79
-EnableReconnection=true
+EnableReconnection=false
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
 EffectVolume=@Variant(\0\0\0\x87>\xeb\x85\x1f)
 EnableEffects=true
