--- a/config.ini
+++ b/config.ini
@@ -33,9 +33,9 @@ HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
 WindowPosition=@Point(370 -1)
 WindowState=0
-UserName=Qu\xe2n S\x1b0
-HostAddress=113.161.71.79
-EnableReconnection=true
+UserName=Ku Kha
+HostAddress=127.0.0.1
+EnableReconnection=false
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
 EffectVolume=@Variant(\0\0\0\x87>\xeb\x85\x1f)
 EnableEffects=true
@@ -50,7 +50,7 @@ EnableSuperDrag=false
 EnableDoubleClick=false
 EnableAutoPreshowInConsoleMode=false
 BubbleChatBoxKeepSeconds=2
-IgnoreOthersSwitchesOfSkin=false
+IgnoreOthersSwitchesOfSkin=true
 EnableAutoSaveRecord=false
 NetworkOnly=false
 SkillDescriptionInOverviewColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\0\0\x80\x80\0\0)
