--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [General]
 LuaPackages=Xmode_hegemony
 ForbidPackages=test, jiange-defense
-ServerName=hk2\x7684\x670d\x52a1\x5668
-GameMode=06p
-OperationTimeout=60
+ServerName=Tam Qu\x1ed1\x63 S\xe1t v2
+GameMode=07p
+OperationTimeout=30
 OperationNoLimit=false
 RandomSeat=true
 EnableCheat=false
@@ -13,25 +13,25 @@ ForbidSIMC=false
 DisableChat=false
 HegemonyMaxChoice=7
 CountDownSeconds=3
-NullificationCountDown=8
+NullificationCountDown=15
 EnableMinimizeDialog=false
-RewardTheFirstShowingPlayer=false
+RewardTheFirstShowingPlayer=true
 ForbidAddingRobot=false
-OriginAIDelay=1000
+OriginAIDelay=3000
 AlterAIDelayAD=false
 AIDelayAD=0
-SurrenderAtDeath=true
+SurrenderAtDeath=false
 LuckCardLimitation=0
 ServerPort=9527
 Address=
 DisableLua=false
 AIChat=true
-BanPackages=test, jiange-defense
-EnableLordConvertion=true
-CardConversions=DragonPhoenix, PeaceSpell
+BanPackages=jiange-defense, test
+EnableLordConvertion=false
+CardConversions=@Invalid()
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(370 -1)
+WindowPosition=@Point(-1421 4)
 WindowState=0
 UserName=Ku Kha
 HostAddress=127.0.0.1
@@ -46,9 +46,9 @@ NoEquipAnim=false
 NeverNullifyMyTrick=false
 EnableAutoTarget=true
 EnableIntellectualSelection=true
-EnableSuperDrag=false
-EnableDoubleClick=false
-EnableAutoPreshowInConsoleMode=false
+EnableSuperDrag=true
+EnableDoubleClick=true
+EnableAutoPreshowInConsoleMode=true
 BubbleChatBoxKeepSeconds=2
 IgnoreOthersSwitchesOfSkin=true
 EnableAutoSaveRecord=false
@@ -62,7 +62,7 @@ ToolTipBackgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\0\0\0\0\0\0\0\0)
 TableBgImage=image/backdrop/table.jpg
 BackgroundImage=image/backdrop/bg.jpg
 RecordSavePath=records/
-UserAvatar=jg_sima
+UserAvatar=lord_sunquan
 LastReplayDir=C:/Users/Administrator/Desktop/save TQS
 
 [CardEditor]
