--- a/config.ini
+++ b/config.ini
@@ -2,12 +2,12 @@
 LuaPackages=Xmode_hegemony
 ForbidPackages=test, jiange-defense
 ServerName=Tam Qu\x1ed1\x63 S\xe1t v2
-GameMode=07p
+GameMode=05p
 OperationTimeout=30
 OperationNoLimit=false
 RandomSeat=true
-EnableCheat=false
-FreeChoose=false
+EnableCheat=true
+FreeChoose=true
 PileSwappingLimitation=5
 ForbidSIMC=false
 DisableChat=false
@@ -26,7 +26,7 @@ ServerPort=9527
 Address=
 DisableLua=false
 AIChat=true
-BanPackages=jiange-defense, test
+BanPackages=test, jiange-defense
 EnableLordConvertion=false
 CardConversions=@Invalid()
 HistoryIPs=113.161.71.79, 127.0.0.1
@@ -50,7 +50,7 @@ EnableSuperDrag=true
 EnableDoubleClick=true
 EnableAutoPreshowInConsoleMode=true
 BubbleChatBoxKeepSeconds=2
-IgnoreOthersSwitchesOfSkin=true
+IgnoreOthersSwitchesOfSkin=false
 EnableAutoSaveRecord=false
 NetworkOnly=false
 SkillDescriptionInOverviewColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\0\0\x80\x80\0\0)
