--- a/config.ini
+++ b/config.ini
@@ -2,12 +2,12 @@
 LuaPackages=Xmode_hegemony
 ForbidPackages=test, jiange-defense
 ServerName=Tam Qu\x1ed1\x63 S\xe1t v2
-GameMode=05p
+GameMode=07p
 OperationTimeout=30
 OperationNoLimit=false
 RandomSeat=true
-EnableCheat=true
-FreeChoose=true
+EnableCheat=false
+FreeChoose=false
 PileSwappingLimitation=5
 ForbidSIMC=false
 DisableChat=false
@@ -26,14 +26,14 @@ ServerPort=9527
 Address=
 DisableLua=false
 AIChat=true
-BanPackages=test, jiange-defense
+BanPackages=jiange-defense, test
 EnableLordConvertion=false
 CardConversions=@Invalid()
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(-1565 50)
+WindowPosition=@Point(-1421 4)
 WindowState=0
-UserName=Ku Kha a
+UserName=Ku Kha
 HostAddress=113.161.71.79
 EnableReconnection=false
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
@@ -50,7 +50,7 @@ EnableSuperDrag=true
 EnableDoubleClick=true
 EnableAutoPreshowInConsoleMode=true
 BubbleChatBoxKeepSeconds=2
-IgnoreOthersSwitchesOfSkin=false
+IgnoreOthersSwitchesOfSkin=true
 EnableAutoSaveRecord=false
 NetworkOnly=false
 SkillDescriptionInOverviewColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\0\0\x80\x80\0\0)
