--- a/config.ini
+++ b/config.ini
@@ -33,7 +33,7 @@ HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
 WindowPosition=@Point(-1421 4)
 WindowState=0
-UserName=Ku Kha aa
+UserName=Ku Kha
 HostAddress=113.161.71.79
 EnableReconnection=false
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
