--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [General]
 LuaPackages=Xmode_hegemony
 ForbidPackages=test, jiange-defense
-ServerName=123123123
-GameMode=06p
-OperationTimeout=60
+ServerName=Tam Qu\x1ed1\x63 S\xe1t v2
+GameMode=07p
+OperationTimeout=30
 OperationNoLimit=false
 RandomSeat=true
 EnableCheat=false
@@ -13,26 +13,27 @@ ForbidSIMC=false
 DisableChat=false
 HegemonyMaxChoice=7
 CountDownSeconds=3
-NullificationCountDown=8
+NullificationCountDown=15
 EnableMinimizeDialog=false
-RewardTheFirstShowingPlayer=false
+RewardTheFirstShowingPlayer=true
 ForbidAddingRobot=false
-OriginAIDelay=1000
+OriginAIDelay=3000
 AlterAIDelayAD=false
 AIDelayAD=0
-SurrenderAtDeath=true
+SurrenderAtDeath=false
 LuckCardLimitation=0
 ServerPort=9527
 Address=
 DisableLua=false
 AIChat=true
-BanPackages=test, jiange-defense
-EnableLordConvertion=true
-CardConversions=DragonPhoenix, PeaceSpell
+BanPackages=jiange-defense, test
+EnableLordConvertion=false
+CardConversions=@Invalid()
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
-WindowPosition=@Point(-2 -1)
-WindowState=0
+WindowPosition=@Point(-1421 4)
+="======"
+WindowState=2
 UserName=Qu\xe2n S\x1b0
 HostAddress=113.161.71.79
 EnableReconnection=true
@@ -46,11 +47,11 @@ NoEquipAnim=false
 NeverNullifyMyTrick=false
 EnableAutoTarget=true
 EnableIntellectualSelection=true
-EnableSuperDrag=false
-EnableDoubleClick=false
-EnableAutoPreshowInConsoleMode=false
+EnableSuperDrag=true
+EnableDoubleClick=true
+EnableAutoPreshowInConsoleMode=true
 BubbleChatBoxKeepSeconds=2
-IgnoreOthersSwitchesOfSkin=false
+IgnoreOthersSwitchesOfSkin=true
 EnableAutoSaveRecord=false
 NetworkOnly=false
 SkillDescriptionInOverviewColor=@Variant(\0\0\0\x43\x1\xff\xff\xff\xff\0\0\x80\x80\0\0)
