--- a/config.ini
+++ b/config.ini
@@ -32,10 +32,10 @@ CardConversions=@Invalid()
 HistoryIPs=113.161.71.79, 127.0.0.1
 WindowSize=@Size(1357 835)
 WindowPosition=@Point(-1421 4)
-WindowState=0
-UserName=Ku Kha
+WindowState=2
+UserName=Khanh
 HostAddress=113.161.71.79
-EnableReconnection=false
+EnableReconnection=true
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
 EffectVolume=@Variant(\0\0\0\x87>\xeb\x85\x1f)
 EnableEffects=true
@@ -62,7 +62,7 @@ ToolTipBackgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\0\0\0\0\0\0\0\0)
 TableBgImage=image/backdrop/table.jpg
 BackgroundImage=image/backdrop/bg.jpg
 RecordSavePath=records/
-UserAvatar=lord_sunquan
+UserAvatar=jg_sima
 LastReplayDir=C:/Users/Administrator/Desktop/save TQS
 
 [CardEditor]
