--- a/config.ini
+++ b/config.ini
@@ -30,10 +30,10 @@ BanPackages=test, jiange-defense
 EnableLordConvertion=true
 CardConversions=DragonPhoenix, PeaceSpell
 HistoryIPs=113.161.71.79, 127.0.0.1
-WindowSize=@Size(1357 835)
-WindowPosition=@Point(-2 -1)
+WindowSize=@Size(1578 911)
+WindowPosition=@Point(129 89)
 WindowState=0
-UserName=Qu\xe2n S\x1b0
+UserName=HHH
 HostAddress=113.161.71.79
 EnableReconnection=true
 BGMVolume=@Variant(\0\0\0\x87\0\0\0\0)
